--- a/terzaghi.ipynb
+++ b/terzaghi.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "terzaghi.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNl4nNzzY+J4YwC9E22w5/m",
+      "authorship_tag": "ABX9TyNwqn0hslOv0z0EQR+iO8x8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "determine qllow\n",
         "'''"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -88,25 +88,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tkyA__JeD6Ho",
-        "outputId": "ef69a8ea-6017-4166-ee66-0ba3d666c087"
+        "outputId": "fc15f73e-f539-4e6e-8955-14cbd72d62b1"
       },
       "source": [
         "FS=3\n",
         "def bearing (fee):\n",
-        "  fee=fee/180*pi\n",
-        "  Nq=exp(2*pi*(0.75-fee/(2*pi))*tan(fee))/(2*(cos(pi/4+fee/2))**2)\n",
-        "  Nc=(Nq-1)/tan(fee)\n",
-        "  Ng=2*(Nq+1)*tan(fee)/(1+0.4*sin(4*fee))\n",
+        "  if fee == 0:\n",
+        "    Nc=5.7\n",
+        "    Nq=1\n",
+        "    Ng=0\n",
+        "  else:\n",
+        "    fee=fee/180*pi\n",
+        "    Nq=exp(2*pi*(0.75-fee/(2*pi))*tan(fee))/(2*(cos(pi/4+fee/2))**2)\n",
+        "    Nc=(Nq-1)/tan(fee)\n",
+        "    Ng=2*(Nq+1)*tan(fee)/(1+0.4*sin(4*fee))\n",
         "  return Nc, Nq, Ng \n",
         "\n",
-        "Nc, Nq, Ng =bearing(30)\n",
+        "fee=30\n",
+        "c=0\n",
+        "Nc, Nq, Ng =bearing(fee)\n",
         "\n",
-        "qc=0\n",
+        "qc=c*Nc\n",
         "q=2*(18-9.81)\n",
         "qq=q*Nq\n",
         "qg=0.4*(18-9.81)*5*Ng\n",
-        "print((qq,qg))\n",
-        "qult=qq+qg\n",
+        "print((qc,qq,qg))\n",
+        "qult=qc+qq+qg\n",
         "qallow =qult/FS\n",
         "qself=(18-9.81)*0.5+24*1\n",
         "qallownet=qallow-qself\n",
@@ -114,12 +121,12 @@
         "print('qallownet =', qallownet, 'kPa')\n",
         "print('Load =', Q,' kN')\n"
       ],
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(367.8250477117415, 329.499723131906)\n",
+            "(0.0, 367.8250477117415, 329.499723131906)\n",
             "qallownet = 204.3465902812158 kPa\n",
             "Load = 5108.664757030395  kN\n"
           ],
